--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
 #canvas {
   border: 2px solid black;
   background: #fff;
-  cursor: crosshair;
+  cursor: none;
   /* margin-bottom: 5%; */
 }
 
@@ -61,6 +61,14 @@
   transition: 0.3s;
   height: 50px;
   width: 50px;
+  font-weight: bolder;
+  border-radius: 5px;
+  transition: 0.3s;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btns button:hover {
@@ -83,4 +91,135 @@
   border: 1px solid black;
   border-radius: 0.5rem;
   /* display: none; */
+}
+
+.btns button::before{
+  background-color: rgba(146, 146, 146, 0.65);
+  color: white;
+  position: absolute;
+  top: -100%;
+  left: 0;
+  font-size: 1.3rem;
+  padding: 5px;
+  border-radius: 3px;
+  opacity: 0;
+}
+
+.btns button:hover::before{
+  opacity: 1;
+  transition: all 0.5s step-end;
+}
+
+.btns .undo::before{
+  content: "Undo";
+}
+
+.btns .redo::before{
+  content: "Redo";
+}
+
+.btns .clear::before{
+  content: "Clear All";
+  width: 300%;
+}
+
+.btns .pen::before{
+  content: "Pen";
+}
+
+.btns .erase::before{
+  content: "Eraser";
+}
+
+.btns .shape-btn::before{
+  content: "Shapes";
+}
+
+
+input[type="range"] {
+  cursor: pointer;
+  position: relative;
+}
+
+input[type="range"]::before{
+  background-color: #000000ec;
+  content: "Slider";
+  color: white;
+  position: absolute;
+  top: -45px;
+  left: 25%;
+  font-size: 1.3rem;
+  padding: 5px;
+  border-radius: 3px;
+  opacity: 0;
+}
+
+input[type="range"]:hover::before{
+  opacity: 1;
+  transition: all 0.5s step-end;
+}
+
+input[type="color"] {
+  -webkit-appearance: none;
+  border: none;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  position: relative;
+}
+
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0px;
+
+}
+
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+  border-radius: 50%;
+}
+
+input[type="color"]::before{
+  background-color: #000000ec;
+  content: "Color Picker";
+  color: white;
+  position: absolute;
+  width: 400%;
+  top: -180%;
+  left: -150%;
+  font-size: 1.3rem;
+  padding: 5px;
+  border-radius: 3px;
+  opacity: 0;
+}
+
+input[type="color"]:hover::before{
+  opacity: 1;
+  transition: all 0.5s step-end;
+}
+
+
+.pencil{
+  position: absolute;
+  top: 0;
+  left: 0;
+  fill: black;
+  opacity: 0;
+  pointer-events: none;
+}
+
+
+.circle {
+  position: fixed;
+  display: none;
+  border-radius: 50%;
+  border: 1px dashed black;
+  width: 6px;
+  height:6px;
+  left: 20px;
+  right: 0;
+  transition: transform .2s ease, opacity .2s ease, border-color .2s ease, background-color .2s ease;
+  pointer-events: none;
+  background-color: rgba(194, 194, 194, .25);
+  opacity: 0;
 }
