--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ input[type="range"] {
 
 input[type="range"]::before {
   background-color: rgba(146, 146, 146, 0.65);
-  content: "Slider";
+  content: "Increase size";
   color: rgb(255, 255, 255);
   position: absolute;
   top: -45px;
@@ -182,7 +182,7 @@ input[type="color"]::-webkit-color-swatch-wrapper {
 
 input[type="color"]::-webkit-color-swatch {
   border: none;
-  border-radius: 50%;
+  /* border-radius: 50%; */
 }
 
 input[type="color"]::before {
@@ -228,6 +228,10 @@ input[type="color"]:hover::before {
   transition: transform 0.2s ease, opacity 0.2s ease, border-color 0.2s ease,
     background-color 0.2s ease;
   pointer-events: none;
-  background-color: rgba(194, 194, 194, 0.25);
+  background-color: rgba(230, 210, 210, 0.25);
   opacity: 0;
+}
+
+.shape-btn {
+  display: none;
 }
