--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
   justify-content: space-between;
   align-items: center;
   /* margin-right: 30px; */
-  padding: 10 10px;
+  /* padding: 10 10px; */
   border: 1px solid rgb(99, 97, 97);
   background-color: #fff;
   padding: 5px 10px;
