--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  box-shadow: 10px 10px 5px grey;
   /* background: #efffee; */
 }
 
